# ChangeLog for dev-python/pydns
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pydns/ChangeLog,v 1.3 2008/09/12 13:55:31 sbriesen Exp $

*pydns-2.3.3 (12 Sep 2008)

  12 Sep 2008; Stefan Briesenick <sbriesen@gentoo.org> +pydns-2.3.3.ebuild:
  version bump, solving bug #233217.

*pydns-2.3.1 (07 Apr 2008)

  07 Apr 2008; Stefan Briesenick <sbriesen@gentoo.org> +pydns-2.3.1.ebuild:
  version bump, thanks to Bartłomiej Syryjczyk for reporting.

*pydns-2.3.0 (06 Oct 2006)

  06 Oct 2006; Stefan Briesenick <sbriesen@gentoo.org> +metadata.xml,
  +pydns-2.3.0.ebuild:
  initial commit.
