@@ -1,8 +1,6 @@
-DIST pydns-2.3.0.tgz 20909 RMD160 b99b969c8cb547292535d63711d13be275b9dba2 SHA1 bbf4e7874ba35da9c8427761107cedbafa1f207c SHA256 0148485a5e1e08229cb1b5317197ad2f51bc9d5ed5003792bf218e2339e7dea2
 DIST pydns-2.3.1.tar.gz 22006 RMD160 2ca54d59f599f36da06736f9b3a10f8a01412be4 SHA1 b30a610ba09dc6a3164c13eb72a7f5e34de5b089 SHA256 b5539a6e51ff130f72dba3457256655c4d237c8ed5d04c16a795efe6248df99e
 DIST pydns-2.3.3.tar.gz 23897 RMD160 948bc070d4fca6ba7d39296b088df939f8c58656 SHA1 f34f125143b0db145e9d4c876b653db69a04f24a SHA256 349b310ecddd4f9b67da8fd078e35b35b4d9151bc6008890b49d4c3a24aa6b37
-EBUILD pydns-2.3.0.ebuild 1105 RMD160 526e2e0201d150f1e964a157e5a59cfef1d44bdf SHA1 c5f6b96c438f653e6036d3287e250810f153b914 SHA256 2bc236f37a7c036fbfaf1f7aafb56607c33278bdc32f8eba0ed91dda72e85c4a
 EBUILD pydns-2.3.1.ebuild 1077 RMD160 e6360e7be2388dcdb46ca014fcb35a0bc8208a11 SHA1 7abd63b3bc12e46705b904490709091d758095dc SHA256 c8a4a5164250d228ef3c0cc5b0668df25d943e46e0ecc1624be38059fd9bba7f
 EBUILD pydns-2.3.3.ebuild 1178 RMD160 a2686ed68b81713c5ad319bd7cab2d117cbfe635 SHA1 a35ff982e6b1fd845f70520f3c8c93d7031dcff5 SHA256 e4cabace1dca9b77be4aeeb4a42e45b3701883f494729f8830fbdffb9716f358
-MISC ChangeLog 657 RMD160 77e0a489bcb1de3519a0fa5acb041d2a26efae7d SHA1 17cdc7e9384bef71e441de12dfd1f8258452ea8c SHA256 3b1762a092436899d85f4aed9732c51d13cf0e3f52744d662b7c95d876d28f0a
+MISC ChangeLog 757 RMD160 372b29a887fca7beb241962a5efa57be2c1a3d60 SHA1 202f4d60935f1762f0430690d969c1242e3de980 SHA256 21b3f63497ebfa367848413337c0fd1f0ec9099de27a958d66bbcf3fe5ddd7eb
 MISC metadata.xml 520 RMD160 85cdcd069f88293e383a717e43909428e9c8edce SHA1 b455199f76a2acb13d01b20a4b700253be39f96a SHA256 f3faa087cccbc6467e9c092c4bee6f3c684b23a05739d692f6d490b7468220ad
