@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pydns
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pydns/ChangeLog,v 1.3 2008/09/12 13:55:31 sbriesen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pydns/ChangeLog,v 1.4 2008/09/12 13:57:07 sbriesen Exp $
+
+  12 Sep 2008; Stefan Briesenick <sbriesen@gentoo.org> -pydns-2.3.0.ebuild:
+  removed old version.
 
 *pydns-2.3.3 (12 Sep 2008)
 
